# unicamp_inf1900_progamacao_cpp

./: .gitignore  LICENSE  README.md
M1/W1/INF1900_M1_lab1/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.MD  cmake_install.cmake  main.cpp  operacoes.cpp
M1/W2/INF1900_M1_Lab2/: CMakeLists.txt  README.MD  matriz.cpp  matriz_alt.cpp
M2/INF1900_M2_tarefa_1/: CMakeLists.txt  food.cpp  food.h  item.cpp  item.h  jewel.cpp  jewel.h  jogo.cpp  main.cpp  map.cpp  map.h  treasure.cpp  treasure.h
M2/W3/INF1900_M2_tarefa_1/: CMakeLists.txt  README.MD  food.cpp  food.h  item.cpp  item.h  main.cpp  map.cpp  map.h  treasure.cpp  treasure.h
M2/W4/INF1900_M2_tarefa_2/: CMakeLists.txt  README.MD  food.cpp  food.h  item.cpp  item.h  jewel.cpp  jewel.h  main.cpp  map.cpp  map.h  robot.cpp  robot.h  treasure.cpp  treasure.h
M3/W10/: README.MD
M3/W10/INF1900_M3_Exercicio_5/: INF1900_M3_Exercicio_5.sln  README.MD
M3/W5/INF1900_M3_Tarefa_1/: README.MD  inf1900_m3_a1.sln
M3/W8/INF1900_M3_Exercicio_2/: CMakeLists.txt  README.MD  main.cpp
M3/W8/INF1900_M3_Exercicio_3/: CMakeLists.txt  README.MD  main.cpp
M3/W8/INF1900_M3_Exercicio_3_V2/: audio.cpp  fileResource.cpp  imagem.cpp  main.cpp  main.h  texto.cpp
M5/: README.MD
M5/INF_1900_M5_Projeto_Final/: INF_1900_M5_Projeto_Final.sln  LICENSE  README.MD  REQUISITOS.MD  Requisitos_ProjetoFinal.docx  dialog.patch
M5/JogoTruco/: JogoTruco.sln
PROJETO_FINAL/: README.MD
PROJETO_FINAL/JogoTruco/: README.MD  Requisitos_ProjetoFinal.docx
(+421 files in other folders)
